[master]create README MD file

--- a/ExpressApp1/views/layout.pug
+++ b/ExpressApp1/views/layout.pug
@@ -8,10 +8,10 @@ html(lang='en')
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/popper.min.js')
     script(src='/javascripts/bootstrap.min.js')
-    title= 'AE400'
+    title= 'IS4'
   body(class='bg-light',onload='init()')
     block content
     nav(class='navbar fixed-top navbar-light text-white bg-primary')
-      h3= 'LIPS AE400 Configuration'
+      h3= 'ABC Configuration'
     nav(class='navbar fixed-bottom navbar-light text-white bg-primary justify-content-center')
-      h6= 'copyright © LIPS corporation. all rights reserved'
+      h6= 'copyright © ABC corporation. all rights reserved'
